[package]
edition = "2021"
name = "wrench"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bitfield = "0.14.0"
bitvec = "1.0.1"
bus = "2.3.0"
clap = {version = "4.1.8", features = ["derive"]}
ctrlc = "3.2.5"
either = "1.8.1"
redis = "0.22.3"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.94"
serialport = "4.2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
