[package]
edition = "2021"
name = "wrench"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bitfield = "0.14.0"
bitvec = "1.0.1"
bus = "2.3.0"
chrono = "0.4.23"
clap = {version = "4.1.8", features = ["derive"]}
ctrlc = "3.2.5"
num-bigfloat = "1.6.2"
redis = "0.22.3"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.94"
serialport = "4.2.0"
time = {version = "0.3.20", features = ["macros"]}
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "time", "local-time"]}
uuid = {version = "1.3.0", features = ["v4"]}
